[package]
name = "winner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
reqwest = "0.11.18"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.26"
zip = "0.6.6"
json = "0.12.4"
regex = "1.9.3"
local-ip-address = "0.5.4"
clap = { version = "4.3.21", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
rustfmt = "0.10.0"
crossterm = "0.27.0"
lazy_static = "1.4.0"
tmux_interface = "0.3.1"
